# niels-gpt-2

./: .gitignore  QUIKSTART.md  README.md  WALKTHROUGH.md  configs.md  pr-02.md  pr2-05.md  pyproject.toml
configs/: dev-pretrain.json  dev-sft.json  exp-t1024-nocp.json  exp-t512-cp.json  exp-t512-nocp.json  minimal-pretrain.json  minimal-sft.json  personal-pretrain.json  personal-sft.json  pipeline-dev.json  pipeline-personal.json  pipeline-prod.json  pipeline.json  pretrain.json  pretrain_smoke.json  prod-pretrain.json  prod-sft.json  sft.json  sft_smoke.json  smoke-pretrain.json  smoke.json  train.json
data/: primer.generated.txt  primer.txt  public_facts.json
docs/: CONFIG_MIGRATION.md  pr-02.md  pr-05a.md  pr2-01.md  pr2-02.md  pr2-03.md  pr2-04.md  pr2-05.md  pr2-06.md  pr2-07.md  pr2_roadmap.md  settings.md
niels_gpt/: __init__.py  chat_cli.py  chat_format.py  chat_template.py  config.py  device.py  generate.py  paths.py  profiles.py  rng.py  settings.py  special_tokens.py  streams.py  tokenizer.py
scripts/: README.md  run_full_personal_pipeline.sh  run_full_pipeline.sh  run_overnight.sh  smoke_loaders.py  train_tokenizer.py
src/: chat_format.py  tokenizer.py
tests/: test_attention_mask.py  test_attn_trace.py  test_audit_config_coverage.py  test_bench_sweep_smoke.py  test_bench_trial_smoke.py  test_block.py  test_cache_determinism.py  test_cache_validation.py  test_chat_cli_kv_cache.py  test_chat_cli_stop.py  test_chat_format.py  test_chat_template.py  test_checkpoint_roundtrip.py  test_data_loading.py  test_dolly_mapping.py  test_dropout_policy.py  (+25 more)
(+109 files in other folders)
