[project]
name = "niels-gpt"
version = "0.1.0"
description = "A minimal GPT implementation"
requires-python = ">=3.10"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
